created release version, removed files, minified js

--- a/index.html
+++ b/index.html
@@ -12,12 +12,7 @@
 <script type="text/javascript" src="libs/jquery/jquery.js" ></script>
 <script type="text/javascript" src="libs/easing/jquery.easing.1.3.js"></script>
 <script type="text/javascript" src="libs/easyslider/easySlider1.7.js"></script>
-<!--
-<script type="text/javascript" src="libs/scrolling-parallax/jquery.scrolling-parallax.js" ></script>
-<script type="text/javascript" src="libs/swfobject/src.debug/swfobject.js"></script>
-<script type="text/javascript" src="libs/loader/jquery.loader3.debug.js"></script>
--->
-<script type="text/javascript" src="script.debug.js"></script>
+<script type="text/javascript" src="script.js"></script>
 
 
 </head>
